Agregar configuración, cambiar la connectionString y migraciones
Cambie la base de datos de Neon a Supabase, agregué una nueva entrada en los connectionString y las mutaciones del cambio. Ajuste en algunos modelos.

--- a/DSS_Scoring/appsettings.json
+++ b/DSS_Scoring/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "NEON_CONNECTION": "User Id=neondb_owner;Password=zmt3GXCKP6Er;Server=ep-lively-dawn-a5jirgb2.us-east-2.aws.neon.tech;Port=5432;Database=neondb;"
+    "NEON_CONNECTION": "User Id=neondb_owner;Password=zmt3GXCKP6Er;Server=ep-lively-dawn-a5jirgb2.us-east-2.aws.neon.tech;Port=5432;Database=neondb;",
+    "SUPABASE_CONNECTION": "User Id=postgres.chqjpvdgysmsbeopvsqu;Password=KEu0Pv82ZZsZodWa;Server=aws-0-us-west-1.pooler.supabase.com;Port=5432;Database=postgres;"
   },
   "Logging": {
     "LogLevel": {
