--- a/DSS_Scoring/DSS_Scoring.csproj
+++ b/DSS_Scoring/DSS_Scoring.csproj
@@ -41,6 +41,8 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Folder Include="Data\" />
+    <Folder Include="Models\" />
     <Folder Include="Controllers\" />
     <Folder Include="HttpTestEndpoints\" />
   </ItemGroup>
